// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`aborts request when sending new message while waiting for response 1`] = `
[
  {
    "content": [
      {
        "citations": undefined,
        "text": "First message",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember the skills in <available-skills>.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
Avoid using large portions of text when using the EDL tool. Large text blocks are fragile and wasteful.
When making a selection, select the beginning of the text, then extend_forward to the end. To move code around, use registers via cut.

Prefer text/regex patterns over line numbers for selection — line numbers are fragile and error-prone. Use heredoc patterns as the default since they match exactly.
Only use the explore agent to answer specific questions that can be answered concisely, like summarizing how something works or where something is defined.
WRONG: read the full contents of file
RIGHT: where is X is handled?
</system-reminder>",
        "type": "system_reminder",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "Second message while first is pending",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember the skills in <available-skills>.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
Avoid using large portions of text when using the EDL tool. Large text blocks are fragile and wasteful.
When making a selection, select the beginning of the text, then extend_forward to the end. To move code around, use registers via cut.

Prefer text/regex patterns over line numbers for selection — line numbers are fragile and error-prone. Use heredoc patterns as the default since they match exactly.
Only use the explore agent to answer specific questions that can be answered concisely, like summarizing how something works or where something is defined.
WRONG: read the full contents of file
RIGHT: where is X is handled?
</system-reminder>",
        "type": "system_reminder",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "Second response that should be shown",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
]
`;

exports[`aborts tool use when sending new message while tool is executing 1`] = `
[
  {
    "content": [
      {
        "citations": undefined,
        "text": "Run a slow command",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember the skills in <available-skills>.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
Avoid using large portions of text when using the EDL tool. Large text blocks are fragile and wasteful.
When making a selection, select the beginning of the text, then extend_forward to the end. To move code around, use registers via cut.

Prefer text/regex patterns over line numbers for selection — line numbers are fragile and error-prone. Use heredoc patterns as the default since they match exactly.
Only use the explore agent to answer specific questions that can be answered concisely, like summarizing how something works or where something is defined.
WRONG: read the full contents of file
RIGHT: where is X is handled?
</system-reminder>",
        "type": "system_reminder",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "I'll run a slow bash command for you.",
        "type": "text",
      },
      {
        "id": "slow-bash-command",
        "name": "bash_command",
        "request": {
          "status": "ok",
          "value": {
            "id": "slow-bash-command",
            "input": {
              "command": "sleep 5 && echo 'This should be aborted'",
            },
            "toolName": "bash_command",
          },
        },
        "type": "tool_use",
      },
    ],
    "role": "assistant",
    "stopReason": "tool_use",
    "usage": {
      "inputTokens": 1000,
      "outputTokens": 5000,
    },
  },
  {
    "content": [
      {
        "id": "slow-bash-command",
        "result": {
          "error": "Request was aborted by the user.",
          "status": "error",
        },
        "type": "tool_result",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "Cancel that, run something else",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember the skills in <available-skills>.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
Avoid using large portions of text when using the EDL tool. Large text blocks are fragile and wasteful.
When making a selection, select the beginning of the text, then extend_forward to the end. To move code around, use registers via cut.

Prefer text/regex patterns over line numbers for selection — line numbers are fragile and error-prone. Use heredoc patterns as the default since they match exactly.
Only use the explore agent to answer specific questions that can be answered concisely, like summarizing how something works or where something is defined.
WRONG: read the full contents of file
RIGHT: where is X is handled?
</system-reminder>",
        "type": "system_reminder",
      },
    ],
    "role": "user",
  },
]
`;

exports[`followup user message text is visible after tool-use cycle > followup-message-after-tool-use 1`] = `
"# [ Untitled ]
⚙️ [System Prompt ~2K]

# user:
Read a file for me
📋 [System Reminder]
# assistant:
I'll read the file for you.
👀 \`poem.txt\`
✅ 5 lines (~43 tok)
[input: 1000, output: 5000]
📋 [System Reminder]
I've read the file. It contains a poem about moonlight.
# user:
Now edit the poem to be about sunshine
📋 [System Reminder]
# assistant:
I'll edit the poem for you.



Streaming response ⠁"
`;

exports[`followup user message text is visible with context updates > followup-with-context-updates 1`] = `
"# [ Untitled ]
⚙️ [System Prompt ~2K]

# user:
Context Updates:
- \`poem.txt\` [ +5 ]

Help me with this poem
📋 [System Reminder]
# assistant:
I can see the poem. What would you like me to do?
# user:
Context Updates:
- \`poem.txt\` [ +2 / -4 ]

Now make the poem longer please
📋 [System Reminder]
# assistant:
I'll make the poem longer.



Streaming response ⠁"
`;

exports[`forks a thread while streaming by aborting the stream first 1`] = `
[
  {
    "content": [
      {
        "text": "What is 2+2?",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember the skills in <available-skills>.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
Avoid using large portions of text when using the EDL tool. Large text blocks are fragile and wasteful.
When making a selection, select the beginning of the text, then extend_forward to the end. To move code around, use registers via cut.

Prefer text/regex patterns over line numbers for selection — line numbers are fragile and error-prone. Use heredoc patterns as the default since they match exactly.
Only use the explore agent to answer specific questions that can be answered concisely, like summarizing how something works or where something is defined.
WRONG: read the full contents of file
RIGHT: where is X is handled?
</system-reminder>",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": null,
        "text": "2+2 equals 4.",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "text": "What about 3+3?",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember the skills in <available-skills>.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
Avoid using large portions of text when using the EDL tool. Large text blocks are fragile and wasteful.
When making a selection, select the beginning of the text, then extend_forward to the end. To move code around, use registers via cut.

Prefer text/regex patterns over line numbers for selection — line numbers are fragile and error-prone. Use heredoc patterns as the default since they match exactly.
Only use the explore agent to answer specific questions that can be answered concisely, like summarizing how something works or where something is defined.
WRONG: read the full contents of file
RIGHT: where is X is handled?
</system-reminder>",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "text": "Actually, tell me about 5+5",
        "type": "text",
      },
      {
        "cache_control": {
          "type": "ephemeral",
        },
        "text": "<system-reminder>
Remember the skills in <available-skills>.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
Avoid using large portions of text when using the EDL tool. Large text blocks are fragile and wasteful.
When making a selection, select the beginning of the text, then extend_forward to the end. To move code around, use registers via cut.

Prefer text/regex patterns over line numbers for selection — line numbers are fragile and error-prone. Use heredoc patterns as the default since they match exactly.
Only use the explore agent to answer specific questions that can be answered concisely, like summarizing how something works or where something is defined.
WRONG: read the full contents of file
RIGHT: where is X is handled?
</system-reminder>",
        "type": "text",
      },
    ],
    "role": "user",
  },
]
`;

exports[`forks a thread while waiting for tool use by aborting pending tools first 1`] = `
[
  {
    "content": [
      {
        "text": "Read my secret file",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember the skills in <available-skills>.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
Avoid using large portions of text when using the EDL tool. Large text blocks are fragile and wasteful.
When making a selection, select the beginning of the text, then extend_forward to the end. To move code around, use registers via cut.

Prefer text/regex patterns over line numbers for selection — line numbers are fragile and error-prone. Use heredoc patterns as the default since they match exactly.
Only use the explore agent to answer specific questions that can be answered concisely, like summarizing how something works or where something is defined.
WRONG: read the full contents of file
RIGHT: where is X is handled?
</system-reminder>",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": null,
        "text": "I'll read your secret file.",
        "type": "text",
      },
      {
        "id": "get-file-tool",
        "input": {
          "filePath": ".secret",
        },
        "name": "get_file",
        "type": "tool_use",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "content": "Request was aborted by the user.",
        "is_error": true,
        "tool_use_id": "get-file-tool",
        "type": "tool_result",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "text": "Do something else instead",
        "type": "text",
      },
      {
        "cache_control": {
          "type": "ephemeral",
        },
        "text": "<system-reminder>
Remember the skills in <available-skills>.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
Avoid using large portions of text when using the EDL tool. Large text blocks are fragile and wasteful.
When making a selection, select the beginning of the text, then extend_forward to the end. To move code around, use registers via cut.

Prefer text/regex patterns over line numbers for selection — line numbers are fragile and error-prone. Use heredoc patterns as the default since they match exactly.
Only use the explore agent to answer specific questions that can be answered concisely, like summarizing how something works or where something is defined.
WRONG: read the full contents of file
RIGHT: where is X is handled?
</system-reminder>",
        "type": "text",
      },
    ],
    "role": "user",
  },
]
`;

exports[`forks a thread with multiple messages into a new thread > fork-cloned-messages 1`] = `
[
  {
    "content": [
      {
        "text": "What is the capital of France?",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember the skills in <available-skills> and the docs tool for built-in documentation.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
Avoid using large portions of text when using the EDL tool. Large text blocks are fragile and wasteful.
When making a selection, select the beginning of the text, then extend_forward to the end. To move code around, use registers via cut.

Prefer text/regex patterns over line numbers for selection — line numbers are fragile and error-prone. Use heredoc patterns as the default since they match exactly.
Only use the explore agent when you don't already know where to find something. If you know the file or location, use get_file directly instead of spawning an explore agent.
WRONG: read the full contents of file
WRONG: spawning explore when you already know the file path
RIGHT: where is X handled?
</system-reminder>",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": null,
        "text": "The capital of France is Paris.",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "text": "What about Germany?",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember the skills in <available-skills> and the docs tool for built-in documentation.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
Avoid using large portions of text when using the EDL tool. Large text blocks are fragile and wasteful.
When making a selection, select the beginning of the text, then extend_forward to the end. To move code around, use registers via cut.

Prefer text/regex patterns over line numbers for selection — line numbers are fragile and error-prone. Use heredoc patterns as the default since they match exactly.
Only use the explore agent when you don't already know where to find something. If you know the file or location, use get_file directly instead of spawning an explore agent.
WRONG: read the full contents of file
WRONG: spawning explore when you already know the file path
RIGHT: where is X handled?
</system-reminder>",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": null,
        "text": "The capital of Germany is Berlin.",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "text": "Tell me about Italy",
        "type": "text",
      },
      {
        "cache_control": {
          "type": "ephemeral",
        },
        "text": "<system-reminder>
Remember the skills in <available-skills> and the docs tool for built-in documentation.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
Avoid using large portions of text when using the EDL tool. Large text blocks are fragile and wasteful.
When making a selection, select the beginning of the text, then extend_forward to the end. To move code around, use registers via cut.

Prefer text/regex patterns over line numbers for selection — line numbers are fragile and error-prone. Use heredoc patterns as the default since they match exactly.
Only use the explore agent when you don't already know where to find something. If you know the file or location, use get_file directly instead of spawning an explore agent.
WRONG: read the full contents of file
WRONG: spawning explore when you already know the file path
RIGHT: where is X handled?
</system-reminder>",
        "type": "text",
      },
    ],
    "role": "user",
  },
]
`;

exports[`forks a thread with multiple messages into a new thread > forked-thread-messages 1`] = `
[
  {
    "content": [
      {
        "citations": undefined,
        "text": "What is the capital of France?",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember the skills in <available-skills> and the docs tool for built-in documentation.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
Avoid using large portions of text when using the EDL tool. Large text blocks are fragile and wasteful.
When making a selection, select the beginning of the text, then extend_forward to the end. To move code around, use registers via cut.

Prefer text/regex patterns over line numbers for selection — line numbers are fragile and error-prone. Use heredoc patterns as the default since they match exactly.
Only use the explore agent when you don't already know where to find something. If you know the file or location, use get_file directly instead of spawning an explore agent.
WRONG: read the full contents of file
WRONG: spawning explore when you already know the file path
RIGHT: where is X handled?
</system-reminder>",
        "type": "system_reminder",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "The capital of France is Paris.",
        "type": "text",
      },
    ],
    "role": "assistant",
    "stopReason": "end_turn",
    "usage": {
      "inputTokens": 1000,
      "outputTokens": 5000,
    },
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "What about Germany?",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember the skills in <available-skills> and the docs tool for built-in documentation.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
Avoid using large portions of text when using the EDL tool. Large text blocks are fragile and wasteful.
When making a selection, select the beginning of the text, then extend_forward to the end. To move code around, use registers via cut.

Prefer text/regex patterns over line numbers for selection — line numbers are fragile and error-prone. Use heredoc patterns as the default since they match exactly.
Only use the explore agent when you don't already know where to find something. If you know the file or location, use get_file directly instead of spawning an explore agent.
WRONG: read the full contents of file
WRONG: spawning explore when you already know the file path
RIGHT: where is X handled?
</system-reminder>",
        "type": "system_reminder",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "The capital of Germany is Berlin.",
        "type": "text",
      },
    ],
    "role": "assistant",
    "stopReason": "end_turn",
    "usage": {
      "inputTokens": 1000,
      "outputTokens": 5000,
    },
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "Tell me about Italy",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember the skills in <available-skills> and the docs tool for built-in documentation.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
Avoid using large portions of text when using the EDL tool. Large text blocks are fragile and wasteful.
When making a selection, select the beginning of the text, then extend_forward to the end. To move code around, use registers via cut.

Prefer text/regex patterns over line numbers for selection — line numbers are fragile and error-prone. Use heredoc patterns as the default since they match exactly.
Only use the explore agent when you don't already know where to find something. If you know the file or location, use get_file directly instead of spawning an explore agent.
WRONG: read the full contents of file
WRONG: spawning explore when you already know the file path
RIGHT: where is X handled?
</system-reminder>",
        "type": "system_reminder",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "Italy's capital is Rome. It's known for its rich history, art, and cuisine.",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
]
`;

exports[`handles @async messages and sends them on end turn 1`] = `
[
  {
    "content": [
      {
        "text": "Tell me about TypeScript",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember the skills in <available-skills> and the docs tool for built-in documentation.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
Avoid using large portions of text when using the EDL tool. Large text blocks are fragile and wasteful.
When making a selection, select the beginning of the text, then extend_forward to the end. To move code around, use registers via cut.

Prefer text/regex patterns over line numbers for selection — line numbers are fragile and error-prone. Use heredoc patterns as the default since they match exactly.
Only use the explore agent when you don't already know where to find something. If you know the file or location, use get_file directly instead of spawning an explore agent.
WRONG: read the full contents of file
WRONG: spawning explore when you already know the file path
RIGHT: where is X handled?
</system-reminder>",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": null,
        "text": "TypeScript is a typed superset of JavaScript.",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "text": "Also tell me about JavaScript",
        "type": "text",
      },
      {
        "cache_control": {
          "type": "ephemeral",
        },
        "text": "<system-reminder>
Remember the skills in <available-skills> and the docs tool for built-in documentation.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
Avoid using large portions of text when using the EDL tool. Large text blocks are fragile and wasteful.
When making a selection, select the beginning of the text, then extend_forward to the end. To move code around, use registers via cut.

Prefer text/regex patterns over line numbers for selection — line numbers are fragile and error-prone. Use heredoc patterns as the default since they match exactly.
Only use the explore agent when you don't already know where to find something. If you know the file or location, use get_file directly instead of spawning an explore agent.
WRONG: read the full contents of file
WRONG: spawning explore when you already know the file path
RIGHT: where is X handled?
</system-reminder>",
        "type": "text",
      },
    ],
    "role": "user",
  },
]
`;

exports[`handles @async messages by queueing them and sending on next tool response 1`] = `
[
  {
    "content": [
      {
        "text": "Can you run a command?",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember the skills in <available-skills> and the docs tool for built-in documentation.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
Avoid using large portions of text when using the EDL tool. Large text blocks are fragile and wasteful.
When making a selection, select the beginning of the text, then extend_forward to the end. To move code around, use registers via cut.

Prefer text/regex patterns over line numbers for selection — line numbers are fragile and error-prone. Use heredoc patterns as the default since they match exactly.
Only use the explore agent when you don't already know where to find something. If you know the file or location, use get_file directly instead of spawning an explore agent.
WRONG: read the full contents of file
WRONG: spawning explore when you already know the file path
RIGHT: where is X handled?
</system-reminder>",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": null,
        "text": "I'll run the command.",
        "type": "text",
      },
      {
        "id": "bash-tool",
        "input": {
          "command": "cat .secret",
        },
        "name": "bash_command",
        "type": "tool_use",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "content": [
          {
            "text": "stdout:
secret secrets are no fun
exit code 0 (<timing>ms)

Full output (1 lines): /tmp/magenta/threads/<thread-id>/tools/bash-tool/bashCommand.log",
            "type": "text",
          },
        ],
        "is_error": false,
        "tool_use_id": "bash-tool",
        "type": "tool_result",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "text": "This should be queued",
        "type": "text",
      },
      {
        "cache_control": {
          "type": "ephemeral",
        },
        "text": "<system-reminder>
Remember the skills in <available-skills> and the docs tool for built-in documentation.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
Avoid using large portions of text when using the EDL tool. Large text blocks are fragile and wasteful.
When making a selection, select the beginning of the text, then extend_forward to the end. To move code around, use registers via cut.

Prefer text/regex patterns over line numbers for selection — line numbers are fragile and error-prone. Use heredoc patterns as the default since they match exactly.
Only use the explore agent when you don't already know where to find something. If you know the file or location, use get_file directly instead of spawning an explore agent.
WRONG: read the full contents of file
WRONG: spawning explore when you already know the file path
RIGHT: where is X handled?
</system-reminder>",
        "type": "text",
      },
    ],
    "role": "user",
  },
]
`;

exports[`renders successive tool uses with single assistant header and inline metadata > successive-tool-uses-display 1`] = `
"# [ Untitled ]
⚙️ [System Prompt ~2K]

# user:
Read two files for me
📋 [System Reminder]
# assistant:
I'll read the first file.
👀 \`poem.txt\`
✅ 5 lines (~43 tok)
[input: 1000, output: 5000]
📋 [System Reminder]
💭 [Thinking]
👀 \`poem2.txt\`
✅ 5 lines (~43 tok)
[input: 1000, output: 5000]
📋 [System Reminder]
I've read both files for you.

# context:
- \`poem.txt\`
- \`poem2.txt\`

Stopped (end_turn)  [input: 1000, output: 5000] "
`;
